<resources>
    <string name="app_name">MovieBookingApp</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_hello_galaxy_app">Hello! Welcome to Galaxy App</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_forget_password">Forget Password ?</string>
    <string name="lbl_enter_your_password">Enter your password</string>
    <string name="lbl_enter_your_email">Enter your email</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_login_to_continue">Welcome back, login to continue</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_sign_in_with_google">Sign in with google</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_select_a_language">Select a language</string>
    <string name="lbl_promotion_code">Promotion code</string>
    <string name="lbl_tearm_of_services">Tearm of services</string>
    <string name="lbl_rate_us">Rate us</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_enter_your_name">Enter your name</string>
    <string name="lbl_get_your_ticket">Get your ticket</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_plot_summary_text">“He fights Donkey Kong and saves Mario in the \'real world\' (still animated from the sounds of it) New Dino City.” It may be the leaker meant to say Mario fights Donkey Kong and saves someone else, as “The fight is said to be choreographed really well and is quite fast paced, especially when Mario gets the golden hammer</string>
    <string name="lbl_dollar">16$</string>
    <string name="lbl_card_names">VISA, Master Card, JBC</string>
    <string name="lbl_credit_card">Credit Card</string>
    <string name="lbl_pay">Pay $00.00</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_enter_card_number">Enter card number</string>
    <string name="lbl_card_holder">Card holder</string>
    <string name="lbl_enter_card_holder_name">Enter card holder name</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_date">08/21</string>
    <string name="lbl_cvc">323</string>
    <string name="lbl_awesome">Awesome!</string>
    <string name="lbl_this_is_your_ticket">This is your ticket</string>
    <string name="lbl_movie_title">Super Mario</string>
    <string name="lbl_movie_type">105m-IMAX</string>
    <string name="lbl_show_time_date">Show time - Date</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_booking_digits">GC12346BEA</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_cinema_name">Galaxy Cinema</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_screen_count">3</string>
    <string name="lbl_booking_date">7:00 PM - 10 May</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_row_number">D</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_seat_numbers">5, 6</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_ticket_price">$40.00</string>
    <string name="lbl_add_new_card">Add new card</string>
    <string name="lbl_dollar_amount">$ 934.25</string>
    <string name="lbl_payment_amount">Payment Amount</string>
    <string name="lbl_profile_name">Thiha</string>
    <string name="lbl_email_in_drawer">thiha@gmail.com</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_time_chip">2D</string>
    <string name="lbl_days">8</string>
    <string name="lbl_day_names">We</string>
    <string name="lbl_title_cvc">CVC</string>
    <string name="main_screen_username">Hi Thiha!</string>
    <string name="lbl_seat_screen_date_and_time">Monday,10 May,07:00 PM</string>
    <string name="lbl_dont_have_promo_code">Don\'t have any promo code ?</string>
    <string name="lbl_enter_promo_code">Enter promo code</string>
    <string name="lbl_get_it_now">Get it now</string>
    <string name="lbl_sub_total">Sub Total :0$</string>
    <string name="lbl_payment_method">Payment method</string>
    <string name="lbl_ticket">Ticket</string>
    <string name="lbl_ticket_count">2</string>
    <string name="lbl_seats_row_and_numbers">D Row/5, 6</string>
    <string name="lbl_buy_ticket_for">Buy Ticket for $0</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_reserved">Reserved</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_add_new_card_title">Add new card</string>
    <string name="lbl_card_type">VISA</string>
</resources>