<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitedark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.TicketActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTicketClose"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_width="@dimen/margin_xxlarge"
        android:layout_height="@dimen/margin_xxlarge"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_baseline_close_white_24dp"
        app:iconGravity="textStart"
        app:iconTint="@color/black"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_medium_3"
        android:orientation="vertical">





        <RelativeLayout
            android:id="@+id/rlTicketTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTicketTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_awesome"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_heading_1x"
            android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYourTicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_this_is_your_ticket"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tvTicketTitle"
                android:textSize="@dimen/text_regular_3x"
                android:textColor="@color/secondary_text_color"/>




        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium_2">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivPostPathFromTicket"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/supermarioplaceholder"
                        android:scaleType="centerCrop"
                        />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTicketMovieTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/margin_medium"
                            android:paddingTop="@dimen/margin_medium"
                            android:paddingEnd="@dimen/margin_medium"
                            android:text="@string/lbl_movie_title"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_regular_3x"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvMovieTypeAndRunTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_medium"
                        android:paddingTop="@dimen/margin_medium"
                        android:paddingEnd="@dimen/margin_medium"
                        android:text="@string/lbl_movie_type"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/text_regular_2x"/>

                    <FrameLayout
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore= "ContentDescription">



                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:src="@drawable/background_dottet_line"
                        android:layout_gravity="center"
                        android:layerType="software"
                        />

                        <ImageView
                            android:layout_width="@dimen/margin_medium_3"
                            android:layout_height="@dimen/margin_medium_3"
                            android:src="@drawable/background_circle"
                           android:layout_marginStart="-10dp"
                            android:layerType="software"
                            />
                        <ImageView
                            android:layout_width="@dimen/margin_medium_3"
                            android:layout_height="@dimen/margin_medium_3"
                            android:src="@drawable/background_circle"
                            android:layout_gravity="end"
                            android:layout_marginEnd="-10dp"
                            android:layerType="software"
                            />

                    </FrameLayout>

                    <LinearLayout
                        android:id="@+id/llBookingNo"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvBookNoLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_booking_no"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_regular_2x"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvBookNoDigit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_regular_2x"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:text="@string/lbl_booking_digits"
                            android:layout_weight="1"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llShowTimeDate"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvShowTimeDateLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_show_time_date"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_regular_2x"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvShowTimeDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_regular_2x"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:text="@string/lbl_booking_date"
                            android:layout_weight="1"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llTheater"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTheaterLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_theater"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_regular_2x"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvThrater"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_regular_2x"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:text="@string/lbl_cinema_name"
                            android:layout_weight="1"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llScreen"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvScreenLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_screen"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_regular_2x"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvScreenCount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_regular_2x"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:text="@string/lbl_screen_count"
                            android:layout_weight="1"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llRow"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvRowLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_row"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_regular_2x"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvRowNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_regular_2x"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:text="@string/lbl_row_number"
                            android:layout_weight="1"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llSeats"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvSeatsLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_seats"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_regular_2x"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvSeatsNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_regular_2x"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:text="@string/lbl_seat_numbers"
                            android:layout_weight="1"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/llPrice"
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPriceLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lbl_price"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_regular_2x"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPriceCount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_regular_2x"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:text="@string/lbl_ticket_price"
                            android:layout_weight="1"
                            />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_marginTop="@dimen/margin_medium_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore= "ContentDescription">



                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:src="@drawable/background_dottet_line"
                            android:layout_gravity="center"
                            android:layerType="software"
                            />

                        <ImageView
                            android:layout_width="@dimen/margin_medium_3"
                            android:layout_height="@dimen/margin_medium_3"
                            android:src="@drawable/background_circle"
                            android:layout_marginStart="-10dp"
                            android:layerType="software"
                            />
                        <ImageView
                            android:layout_width="@dimen/margin_medium_3"
                            android:layout_height="@dimen/margin_medium_3"
                            android:src="@drawable/background_circle"
                            android:layout_gravity="end"
                            android:layout_marginEnd="-10dp"
                            android:layerType="software"
                            />

                    </FrameLayout>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivBarCode"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/business"
                        android:layout_gravity="center"/>





                </LinearLayout>








        </androidx.cardview.widget.CardView>



    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



